<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:editable="false"
            android:hint="@string/_0"
            android:textSize="75sp"
            app:layout_column="0"
            app:layout_row="0" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"

            app:layout_column="0"
            app:layout_row="1">

            <Button
                android:id="@+id/clearButton"
                style="@style/ButtonStyle"
                android:layout_width="294dp"

                android:text="@string/clear" />

            <Button
                android:id="@+id/divideButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"

                android:text="@string/divide"
                app:layout_column="1"
                app:layout_row="0" />
        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/numbersAndOperations"
            android:layout_width="match_parent"
            app:layout_column="0"
            app:layout_row="2">

            <Button
                android:id="@+id/button7"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/_7"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button4"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/_4"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button1"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/_1"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button8"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/_8"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/button9"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/_9"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/multiplyButton"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/multiply"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/button5"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/_5"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button6"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/_6"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/subtractButton"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/subtract"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/button2"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/_2"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button3"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/_3"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/addButton"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/add"
                app:layout_column="3"
                app:layout_row="2" />
        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            app:layout_column="0"
            app:layout_row="3">

            <Button
                android:id="@+id/button0"
                style="@style/ButtonStyle"

                android:layout_width="191dp"
                android:text="@string/_0"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/dotButton"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/dot"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/equalButton"
                style="@style/ButtonStyle"

                android:layout_width="wrap_content"
                android:text="@string/equal"
                app:layout_column="2"
                app:layout_row="0" />
        </androidx.gridlayout.widget.GridLayout>
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>